--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-        <script src="js/main.js?v=1.0.2"></script>
+        <script src="js/main.js?v=v1.0.2"></script>
             <script src="l10n/de.js"></script>
             <script src="l10n/fr.js"></script>
             <script src="l10n/it.js"></script>
